<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ultra Remote Medicine</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_label">User name</string>
    <string name="login_password_label">Password</string>
    
    <string name="metadata_image_preview_label">image label</string>
    <string name="metadata_patient_first_name_label">First name</string>
    <string name="metadata_patient_last_name_label">Last name</string>
    <string-array name="metadata_sex_label_spinner">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="metadata_sex_label">Sex</string>
    <string name="metadata_dob_label">Date of Birth</string>
    <string name="metadata_health_id_label">Health ID</string>
    <string name="metadata_gps_coordinates_label">GPS Coordinates</string>
    <string name="metadata_address_label">Address</string>
    <string name="metadata_phone_number_label">Phone Number</string>
    <string name="metadata_email_label">Email</string>
    <string name="metadata_patient_id_label">Patient ID</string>
    <string name="metadata_comments_label">Comments</string>
    <string name="metadata_patient_priority_label">Priority</string>
    <string-array name="add_new_case_priority_spinner">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="next">Login</string>
    <string name="dashboard_add_new_patient">New Patient</string>
    <string name="dashboard_add_new_case">New Case</string>
    <string name="dashboard_search_box_hint">Put your search key here</string>
    <string name="dashboard_search">Search</string>
    <string name="previous">Previous</string>
    <string name="finish">Send</string>
    <string name="add">Add</string>
    <string name="logout">Log Out</string>
    <string name="metadata_dob_hint">MM/DD/YY</string>
    <string name="metadata_email_hint">sample@sample.com</string>
    
</resources>
