<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
    android:layout_width="@dimen/textview_length"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login_username_label"
	        android:textColor="@color/label_color" />
	
	    <EditText
	        android:id="@+id/login_username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
	        
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/label_color"
	        android:text="@string/login_password_label" />
	    
	    <EditText
	        android:id="@+id/login_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	    />
	    
    	<Button
    	    android:id="@+id/login_submit"
    	    android:layout_width="65dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right"
    	    android:layout_marginRight="5dp"
    	    android:layout_marginTop="10dp"
    	    android:gravity="center_vertical"
    	    android:text="@string/next"
    	    android:textColor="@color/button_text_color"
    	    android:textSize="@dimen/btn_text_size" />

	</LinearLayout>

</RelativeLayout>
